# mess-ai

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEX_HANDOFF_NEXT_STEP.md  DEPLOYMENT_SUMMARY.md  LICENSE  README.md  chatgpt.md  dataset_generation.py  feature_extraction.py  math.md  music_dataset_utils.py  pyproject.toml  recs.md  requirements.txt  tasks.md  todo.md
.github/workflows/: ci.yml  ci.yml.disabled
backend/: .dockerignore  .env.example  CLAUDE.local.md  DOCKER.md  Dockerfile  Makefile  README.md  __init__.py  cli.py  docker-compose.yml  example_usage.py  pyproject.toml
backend/api/: __init__.py  main.py
backend/api/routers/: __init__.py  audio.py  health.py  metadata.py  query.py  recommendations.py  tracks.py
backend/app/: main.py
backend/app/api/: health.py  recommendations.py  stream.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: s3_keys.py  s3_service.py
backend/core/: __init__.py  config.py  dependencies.py
backend/core/services/: __init__.py  async_recommendation_service.py  audio_service.py  health_service.py  metadata_service.py  recommendation_service.py
backend/mess_ai/: __init__.py
backend/mess_ai/audio/: __init__.py  player.py
backend/mess_ai/database/: __init__.py  client.py  migration.py  models.py  repositories.py
backend/mess_ai/datasets/: __init__.py  base.py  factory.py  maestro.py
backend/mess_ai/metadata/: __init__.py
backend/mess_ai/models/: __init__.py  advanced_recommender.py  async_unified_recommender.py  diverse_recommender.py  metadata.py  recommender.py  unified_recommender.py
backend/mess_ai/pipeline/: __init__.py  config.py
backend/mess_ai/pipeline/features/: __init__.py  extractor.py
backend/mess_ai/search/: __init__.py  similarity.py
backend/services/: audio_service.py  pipeline_client.py
data/: README.md  reason.md
data/metadata/: music_catalog.csv  music_catalog.json
deploy/: CLAUDE.local.md  README.md  backend.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  frontend.dev.Dockerfile
deploy/docker/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml
deploy/requirements/: requirements-dev.txt  requirements-production.txt  requirements.txt
deploy/scripts/: deploy-ec2.sh  deploy.sh
docs/: CONCEPTS.md  EXPRESSIVE_RETRIEVAL_PLAN.md  PUBLIC_RELEASE_CHECKLIST.md  QUICK_REFERENCE.md  context_index.md  diverse-recommendations.md  evaluation_framework_plan.md  pr_backlog.md  product_narrative.md  research.md  system_data_flow.md
frontend/: CLAUDE.local.md  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
mess/: __init__.py  _runtime.py  config.py  search.py
mess/datasets/: __init__.py  base.py  clip_index.py  factory.py  maestro.py  metadata_table.py  smd.py  stores.py  torch_clip_dataset.py  torch_dataset.py
mess/evaluation/: __init__.py  metrics.py
mess/extraction/: EXTRACTION.md  README.md  __init__.py  audio.py  cache.py  config.py  extractor.py  pipeline.py  storage.py
mess/probing/: DISCOVERY_REFERENCE.md  __init__.py  _midi.py  _schema.py  discovery.py  layer_discovery.py  midi_targets.py  proxy_targets.py  segment_targets.py  targets.py
mess/search/: __init__.py  aspects.py  contracts.py  diverse.py  faiss_index.py  hybrid.py  layer_based_recommender.py  layer_indices.py  reranker.py  search.py  similarity.py
mess/training/: __init__.py  config.py  context_config.py  context_export.py  context_trainer.py  contextualizer.py  export.py  index.py  losses.py  mining.py  trainer.py
misc/: dataset_generation.py  music_dataset_utils.py
notebooks/: diversity_analysis.ipynb  test_feature_extraction.ipynb
pipeline/: CLAUDE.local.md  cli.py  requirements.txt
pipeline/api/: __init__.py  main.py
pipeline/datasets/: base.py  factory.py  maestro.py  smd.py
pipeline/extraction/: __init__.py  config.py  extractor.py
pipeline/metadata/: __init__.py  maestro_csv_parser.py  processor.py
pipeline/probing/: README.md  layer_discovery.py  layer_discovery_results.json  proxy_targets.py
pipeline/query/: intelligent_query_engine.py  layer_based_recommender.py
pipeline/search/: faiss_index.py
research/: dataflow.md
research/scripts/: _NEEDS_UPDATE.txt  build_layer_indices.py  demo_layer_search.py  demo_recommendations.py  evaluate_layer_indices.py  evaluate_similarity.py  extract_features.py  run_probing.py
scripts/: CLAUDE.local.md  README.md  _NEEDS_UPDATE.txt  build_clip_index.py  build_layer_indices.py  build_maestro_manifest.py  contextualize_embeddings.py  demo_layer_search.py  demo_recommendations.py  evaluate_clip_retrieval.py  evaluate_layer_indices.py  evaluate_retrieval.py  evaluate_similarity.py  extract_features.py  extract_maestro_features.py  generate_waveforms.py  inspect_embeddings.py  migrate_features_to_database.py  process_maestro.py  publish_faiss_index.py  run_probing.py  script_status.json  setup_demo_data.py  test_database.py  test_database_integration.py  test_multi_dataset_library.py  test_multi_dataset_search.py  train_contextualizer.py  train_retrieval_ssl.py
src/api/: app.py  main.py
src/core/: config.py  dependencies.py
src/web_player/: app.py
tests/: conftest.py  test_config.py  test_packaging_contracts.py  test_public_api.py  test_readme_examples.py  test_script_status_contract.py  test_setup_demo_data_script.py  tests.md
tests/datasets/: conftest.py  test_base.py  test_build_clip_index_script.py  test_clip_index.py  test_factory.py  test_init.py  test_maestro.py  test_metadata_table.py  test_smd.py  test_stores.py  test_torch_clip_dataset.py  test_torch_dataset.py
tests/evaluation/: test_evaluate_script_smoke.py  test_metrics.py  test_retrieval_mini_benchmark.py
tests/extraction/: conftest.py  test_audio.py  test_extractor.py  test_pipeline.py  test_storage.py
tests/fixtures/: retrieval_tiny.json
tests/probing/: conftest.py  test_centroid_trajectory_target.py  test_discovery.py  test_dynamic_arc_target.py  test_i1_integration.py  test_local_tempo_target.py  (+10 more)
(+62 files in other folders)
