[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mess"]

[project]
name = "mess-ai"
version = "0.1.0"
description = "ML development environment for MERT-based music similarity research"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Jacob Bieschke" }
]

# Project dependencies
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "faiss-cpu>=1.7",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchcodec==0.10.0",
    "transformers==4.38",
    "safetensors",
    "soundfile",
    "librosa>=0.10",
    "huggingface-hub",
    "tokenizers",
    "pandas>=2.1",
    "PyYAML>=6.0",
    "jupyter",
    "matplotlib",
    "seaborn",
    "ipywidgets",
    "tqdm>=4.66",
    "mlflow>=2.10",
    "nnaudio>=0.3.4",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "platform_system == 'Linux'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "platform_system == 'Linux'" }]
torchcodec = [{ index = "pytorch-cu128", marker = "platform_system == 'Linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Fast isolated tests with no I/O or external dependencies",
    "integration: Tests that touch the filesystem or combine modules",
    "slow: Tests that take >5s (model loading, large data)",
    "gpu: Tests requiring GPU (CUDA or MPS)",
]
addopts = ["-ra", "--strict-markers", "--tb=short", "-q"]
filterwarnings = [
    "ignore::DeprecationWarning:transformers.*",
    "ignore::FutureWarning:torch.*",
]

[tool.coverage.run]
source = ["mess"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py311"
include = [
    "mess/**/*.py",
    "tests/**/*.py",
    "scripts/extract_features.py",
    "scripts/run_probing.py",
    "scripts/demo_recommendations.py",
]
exclude = [
    "data",
    "mlruns",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
    "data/",
    "mlruns/",
]
