[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mess"]

[project]
name = "mess-ai"
version = "0.1.0"
description = "ML development environment for MERT-based music similarity research"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Jacob Bieschke" }
]

# Project dependencies
dependencies = [
    "numpy>=1.26,<3",
    "PyYAML>=6.0",
    "pretty-midi>=0.2.10",
]

[project.optional-dependencies]
search = [
    "faiss-cpu>=1.7",
    "boto3>=1.34",
]
ml = [
    "librosa>=0.10",
    "mlflow>=2.10",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchcodec==0.10.0",
    "transformers==4.38",
    "safetensors",
    "soundfile",
    "huggingface-hub",
    "tokenizers",
    "tqdm>=4.66",
]
notebooks = [
    "jupyter",
    "matplotlib",
    "seaborn",
    "ipywidgets",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Fast isolated tests with no I/O or external dependencies",
    "integration: Tests that touch the filesystem or combine modules",
    "slow: Tests that take >5s (model loading, large data)",
    "gpu: Tests requiring GPU (CUDA or MPS)",
]
addopts = ["-ra", "--strict-markers", "--tb=short", "-q"]
filterwarnings = [
    "ignore::DeprecationWarning:transformers.*",
    "ignore::FutureWarning:torch.*",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.coverage.run]
source = ["mess"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py311"
include = [
    "mess/**/*.py",
    "tests/**/*.py",
    "scripts/extract_features.py",
    "scripts/run_probing.py",
    "scripts/demo_recommendations.py",
]
exclude = [
    "data",
    "mlruns",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
    "data/",
    "mlruns/",
]
