[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mess"]

[project]
name = "mess-ai"
version = "0.1.0"
description = "ML development environment for MERT-based music similarity research"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Jacob Bieschke" }
]

# Project dependencies
dependencies = [
    "nnaudio>=0.3.4",
    "numpy>=1.26,<3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
search = [
    "faiss-cpu>=1.7",
    "boto3>=1.34",
]
probing = [
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "librosa>=0.10",
    "soundfile",
    "mlflow>=2.10",
    "pretty-midi>=0.2.10",
]

[dependency-groups]
dev = [
    "boto3>=1.34",
    "faiss-cpu>=1.7",
    "huggingface-hub",
    "librosa>=0.10",
    "mlflow>=2.10",
    "pretty-midi>=0.2.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6.0",
    "safetensors",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "soundfile",
    "tokenizers",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchcodec==0.10.0",
    "tqdm>=4.66",
    "transformers==4.38.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Fast isolated tests with no I/O or external dependencies",
    "integration: Tests that touch the filesystem or combine modules",
    "slow: Tests that take >5s (model loading, large data)",
    "gpu: Tests requiring GPU (CUDA or MPS)",
]
addopts = ["-ra", "--strict-markers", "--tb=short", "-q"]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.coverage.run]
source = ["mess"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py311"
include = [
    "mess/**/*.py",
    "tests/**/*.py",
    "scripts/**/*.py",
]
exclude = [
    "data",
    "mlruns",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
    "data/",
    "mlruns/",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
