[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mess-ai",
    "boto3>=1.42",
    "fastapi>=0.115",
    "pydantic>=2.10",
    "pydantic-settings>=2.8",
    "python-dotenv>=1.0",
    "uvicorn>=0.34",
]

[tool.uv.sources]
mess-ai = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
